updated to parcel 2.12.0 (still same bug)

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <!-- prevent email verification or password reset tokens to be sent as part of the referrer -->
         <meta name="referrer" content="no-referrer">
         <meta name="robots" content="noindex">
+        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"/>
         <title>Parcel and Mantine</title>
     </head>
     <body>
